--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>3.26-SNAPSHOT</version>
+    <version>3.26</version>
   </parent>
   <name>Zauber::Commons::Conversion::Parent</name>
   <groupId>ar.com.zauber.commons</groupId>
