--- a/test/javascript/pom.xml
+++ b/test/javascript/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>commons-test-parent</artifactId>
     <groupId>ar.com.zauber.commons.test</groupId>
-    <version>3.26-SNAPSHOT</version>
+    <version>3.26</version>
   </parent>
   <name>Zauber::Commons::Test::Javascript</name>
   <artifactId>commons-test-javascript</artifactId>
