--- a/auth/api/pom.xml
+++ b/auth/api/pom.xml
@@ -8,4 +8,12 @@
   <artifactId>commons-auth-api</artifactId>
   <packaging>jar</packaging>
   <name>Zauber::Commons::Auth::API</name>
+
+  <dependencies>
+      <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-core</artifactId>
+           <scope>test</scope>
+      </dependency>
+  </dependencies>
 </project>
