--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
       <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
       <doxia.version>1.1</doxia.version>
       <jetty.version>6.1.9</jetty.version>
+      <leviathan.version>0.0</leviathan.version>
 
     <sonar.mantis.id>44</sonar.mantis.id>
     <crono.organization.name>zauber</crono.organization.name>
@@ -484,6 +485,38 @@
        <version>2.5</version>
        <scope>provided</scope>
      </dependency>
+
+      <dependency>
+           <groupId>ar.com.zauber.leviathan</groupId>
+           <artifactId>leviathan-api</artifactId>
+           <version>${leviathan.version}</version>
+      </dependency>
+      <dependency>
+           <groupId>ar.com.zauber.leviathan</groupId>
+           <artifactId>leviathan-api-httpclient</artifactId>
+           <version>${leviathan.version}</version>
+           <scope>runtime</scope>
+      </dependency>
+      <dependency>
+           <groupId>ar.com.zauber.leviathan</groupId>
+           <artifactId>leviathan-api-common</artifactId>
+           <version>${leviathan.version}</version>
+      </dependency>
+      <dependency>
+           <groupId>ar.com.zauber.leviathan</groupId>
+           <artifactId>leviathan-api-ehcache</artifactId>
+           <version>${leviathan.version}</version>
+           <scope>runtime</scope>
+      </dependency>
+      <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-core</artifactId>
+           <version>1.8.4</version>
+           <scope>test</scope>
+      </dependency>
+
+
+ 
     </dependencies>
   </dependencyManagement>
   <reporting>
