--- a/facebook/pom.xml
+++ b/facebook/pom.xml
@@ -3,7 +3,7 @@
  <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-      <version>3.27-SNAPSHOT</version>
+      <version>3.27</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
   <groupId>ar.com.zauber.commons</groupId>
