--- a/social/openid/pom.xml
+++ b/social/openid/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.social</groupId>
-    <version>3.27-SNAPSHOT</version>
+    <version>3.27</version>
   </parent>
   <name>Zauber::Commons::Social::OpenID</name>
   <artifactId>commons-social-openid</artifactId>
