--- a/social/oauth/twitter/pom.xml
+++ b/social/oauth/twitter/pom.xml
@@ -80,8 +80,8 @@
         <!-- END: Servlet Dependencies -->
                         
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
 		</dependency>
 	</dependencies>
 
