--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -15,9 +15,8 @@
        <groupId>commons-lang</groupId>
     </dependency>
     <dependency>
-       <artifactId>log4j</artifactId>
-       <groupId>log4j</groupId>
-       <scope>compile</scope>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
     </dependency>
   </dependencies>
 </project>
