--- a/repository/impl/spring-hbm/pom.xml
+++ b/repository/impl/spring-hbm/pom.xml
@@ -22,28 +22,12 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-annotations</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-commons-annotations</artifactId>
-      <version>3.3.0.ga</version> <!-- should be 3.4.0 but is not in the repo -->
-      <exclusions>
-         <exclusion>
-           <groupId>org.hibernate</groupId>
-           <artifactId>hibernate</artifactId>
-         </exclusion>
-      </exclusions>
-    </dependency>
 
     <dependency>
       <groupId>javassist</groupId>
       <artifactId>javassist</artifactId>
       <version>3.4.GA</version>
     </dependency>
-    <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-log4j12</artifactId>
-       <version>1.5.2</version>
-     </dependency>
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-orm</artifactId>
@@ -70,8 +54,8 @@
 	  <scope>test</scope>      
     </dependency>         
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
