--- a/web/version/pom.xml
+++ b/web/version/pom.xml
@@ -29,9 +29,8 @@
         <scope>test</scope>
      </dependency>
      <dependency>
-        <artifactId>log4j</artifactId>
-        <groupId>log4j</groupId>
-        <scope>test</scope>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
      </dependency>
      <dependency>
         <groupId>javax.servlet</groupId>
