--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
       <plugin>
          <groupId>com.google.code.maven-license-plugin</groupId>
          <artifactId>maven-license-plugin</artifactId>
-         <inherited>false</inherited>
+         <inherited>true</inherited>
          <configuration>
              <quiet>false</quiet>
              <header>src/HEADER.txt</header>
