--- a/moderation/impl/pom.xml
+++ b/moderation/impl/pom.xml
@@ -10,6 +10,7 @@
   <packaging>jar</packaging>
 
   <dependencies>
+    <!-- BEGIN: Zauber Commons -->
     <dependency>
       <groupId>ar.com.zauber.commons</groupId>
       <artifactId>commons</artifactId>
@@ -17,7 +18,6 @@
     <dependency>
       <groupId>ar.com.zauber.commons.auth</groupId>
       <artifactId>commons-auth-impl</artifactId>
-      <version>${pom.version}</version>
     </dependency>
     <dependency>
       <groupId>ar.com.zauber.commons.moderation</groupId>
@@ -26,44 +26,41 @@
     <dependency>
       <groupId>ar.com.zauber.commons.repository.impl</groupId>
       <artifactId>commons-repository-impl-entities</artifactId>
-      <version>${pom.version}</version>
     </dependency>
     <dependency>
       <groupId>ar.com.zauber.commons.repository.impl</groupId>
       <artifactId>commons-repository-impl-springhbm</artifactId>
-      <version>${pom.version}</version>
     </dependency>
+    <!-- END: Zauber Commons -->
+    <!-- BEGIN: Apache Commons -->
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
-    
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-test</artifactId>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>hsqldb</groupId>
-        <artifactId>hsqldb</artifactId>
-        <version>1.8.0.7</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <version>8.4-701.jdbc3</version>
-        <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
-      <version>1.2.2</version>
-      <scope>test</scope>      
     </dependency>
+    <!-- END: Apache Commons -->
+    <!-- BEGIN: Spring Framework -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+    </dependency>
+    <!-- END: Spring Framework -->
+    <!-- BEGIN: JDBC Drivers -->
+    <dependency>
+      <groupId>hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+    </dependency>
+    <!-- END: JDBC Drivers -->
   </dependencies>
 </project>
