--- a/social/oauth/api/pom.xml
+++ b/social/oauth/api/pom.xml
@@ -1,29 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<parent>
-		<groupId>ar.com.zauber.commons.social.oauth</groupId>
-		<artifactId>parent</artifactId>
-		<version>3.31-SNAPSHOT</version>
-	</parent>
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <parent>
+    <groupId>ar.com.zauber.commons.social.oauth</groupId>
+    <artifactId>parent</artifactId>
+    <version>3.31-SNAPSHOT</version>
+  </parent>
 
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>commons-social-oauth-api</artifactId>
-	<name>Zauber::Commons::Social::OAuth::Api</name>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>commons-social-oauth-api</artifactId>
+  <name>Zauber::Commons::Social::OAuth::Api</name>
 
-	<dependencies>
-        <!-- BEGIN: Servlet Dependencies -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- END: Servlet Dependencies -->
-        	
-		<dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-		</dependency>
-	</dependencies>
+  <dependencies>
+    <!-- BEGIN: J2EE Servlet -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+    </dependency>
+    <!-- END: J2EE Servlet -->
+    <!-- BEGIN: Logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <!-- END: Logging -->
+  </dependencies>
 
 </project>
