fixed: por los cambios del pom, saltaron problemas por commons-logging que todavÃ­a estaban

--- a/converter/core/pom.xml
+++ b/converter/core/pom.xml
@@ -22,5 +22,12 @@
        <groupId>org.springframework</groupId>
        <artifactId>spring-beans</artifactId>
     </dependency>
+    <!-- BEGIN: Logging -->
+    <!-- In order to commons-logging usage is bypassed to slf4j -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <!-- END: Logging -->
   </dependencies>
 </project>
