--- a/web/uri/pom.xml
+++ b/web/uri/pom.xml
@@ -40,5 +40,12 @@
       <artifactId>spring-test</artifactId>
     </dependency>
     <!-- END: Spring Framework -->
+    <!-- BEGIN: Logging -->
+    <!-- In order to commons-logging usage is bypassed to slf4j -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <!-- END: Logging -->
   </dependencies>
 </project>
