--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -36,6 +36,13 @@
       <artifactId>postgresql</artifactId>
     </dependency>
     <!-- END: JDBC Drivers -->
+    <!-- BEGIN: Logging -->
+    <!-- In order to commons-logging usage is bypassed to slf4j -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <!-- END: Logging -->
     <dependency>
       <groupId>com.vividsolutions</groupId>
       <artifactId>jts</artifactId>
