--- a/moderation/impl/pom.xml
+++ b/moderation/impl/pom.xml
@@ -62,5 +62,12 @@
       <artifactId>postgresql</artifactId>
     </dependency>
     <!-- END: JDBC Drivers -->
+    <!-- BEGIN: Logging -->
+    <!-- In order to commons-logging usage is bypassed to slf4j -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <!-- END: Logging -->
   </dependencies>
 </project>
