--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -56,5 +56,12 @@
       <artifactId>mail</artifactId>
       <version>1.4</version>
     </dependency>
+    <!-- BEGIN: Logging -->
+    <!-- In order to commons-logging usage is bypassed to slf4j -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <!-- END: Logging -->
   </dependencies>
 </project>
