--- a/social/facebook/pom.xml
+++ b/social/facebook/pom.xml
@@ -25,6 +25,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     <!-- END: Spring Framework -->
     <!-- BEGIN: Spring Security Framework -->
     <dependency>
@@ -46,5 +51,16 @@
       <artifactId>servlet-api</artifactId>
     </dependency>
     <!-- END: J2EE Servlet -->
+    <!-- BEGIN: Logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <!-- In order to commons-logging usage is bypassed to slf4j -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <!-- END: Logging -->
   </dependencies>
 </project>
