--- a/moderation/api/pom.xml
+++ b/moderation/api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.moderation</groupId>
-    <version>3.32-SNAPSHOT</version>
+    <version>3.32</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-moderation-api</artifactId>
