--- a/web/utils/pom.xml
+++ b/web/utils/pom.xml
@@ -36,5 +36,20 @@
        <groupId>org.springframework</groupId>
        <scope>test</scope>
      </dependency>
+    <!-- BEGIN: Logging -->
+    <!-- In order to commons-logging usage is bypassed to slf4j -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <!-- END: Logging -->
+
+    <dependency>
+       <artifactId>mockito-core</artifactId>
+       <groupId>org.mockito</groupId>
+       <scope>test</scope>
+     </dependency>
+
   </dependencies>
 </project>
