--- a/web/uri/pom.xml
+++ b/web/uri/pom.xml
@@ -47,5 +47,9 @@
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <!-- END: Logging -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
