--- a/web/uri/pom.xml
+++ b/web/uri/pom.xml
@@ -46,6 +46,11 @@
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
     <!-- END: Logging -->
     <dependency>
         <groupId>org.mockito</groupId>
