--- a/social/pom.xml
+++ b/social/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>3.33-SNAPSHOT</version>
+    <version>3.33</version>
   </parent>
   <name>Zauber::Commons::Social</name>
   <artifactId>parent</artifactId>
