--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -12,7 +12,7 @@
     <!-- BEGIN: Zauber Commons -->
     <dependency>
       <groupId>ar.com.zauber.commons</groupId>
-      <artifactId>commons</artifactId> 
+      <artifactId>commons-dao</artifactId> 
     </dependency>
     <dependency>
       <groupId>ar.com.zauber.commons.auth</groupId>
