--- a/auth/password/pom.xml
+++ b/auth/password/pom.xml
@@ -11,7 +11,7 @@
   <dependencies>
     <dependency>    
         <groupId>ar.com.zauber.commons</groupId>
-        <artifactId>commons</artifactId>
+        <artifactId>commons-dao</artifactId>
     </dependency>
     <dependency>
         <groupId>org.apache.xmlrpc</groupId>
