--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -11,7 +11,7 @@
     <!-- BEGIN: Zauber Commons -->
     <dependency>
       <groupId>ar.com.zauber.commons</groupId>
-      <artifactId>commons</artifactId>
+      <artifactId>commons-dao</artifactId>
     </dependency>
     <dependency>
       <groupId>ar.com.zauber.commons.web</groupId>
